--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@flaticon/flaticon-uicons": "^3.3.1",
     "@mui/icons-material": "^5.16.7",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
