--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@flaticon/flaticon-uicons": "^3.3.1",
     "@mui/icons-material": "^5.16.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "framer-motion": "^11.3.30",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
