--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@mui/icons-material": "^5.16.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "framer-motion": "^11.3.30",
-    "next": "14.2.5",
+    "next": "^14.2.13",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "tech-profile-website": "file:"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
